--- a/app/src/main/res/layout/activity_stop_sensor.xml
+++ b/app/src/main/res/layout/activity_stop_sensor.xml
@@ -1,67 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context="com.eveningoutpost.dexdrip.Home">
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<android.support.v4.widget.DrawerLayout
+    android:id="@+id/drawer_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    tools:context="com.eveningoutpost.dexdrip.Home">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal">
+        android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/stop_sensor_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Current Sensor Information"
-            android:id="@+id/textView3" />
+            android:textAppearance="?android:attr/textAppearanceLarge"/>
+
+        <Button
+            android:id="@+id/stop_sensor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="16dp"
+            android:text="STOP SENSOR"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/sensor_age_container"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/stop_sensor"
+            android:layout_below="@id/stop_sensor_title"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_marginTop="16dp"
                 android:text="Sensor Age: "
-                android:layout_below="@+id/textView"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="111dp" />
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
 
             <TextView
+                android:id="@+id/sensor_age"
                 android:layout_width="match_parent"
-                android:layout_height="47dp"
-                android:id="@+id/sensor_age" />
-        </LinearLayout>
+                android:layout_height="wrap_content"/>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="STOP SENSOR"
-            android:id="@+id/stop_sensor"
-            android:layout_toEndOf="@+id/sensor_age_container"
-            android:layout_alignParentBottom="true"
-            android:layout_alignEnd="@+id/textView3" />
+            <TextView
+                android:id="@+id/sensor_time_active"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
 
     </RelativeLayout>
 
-
-</LinearLayout>
-
-    <fragment android:id="@+id/navigation_drawer"
-        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
-        android:layout_gravity="start"
+    <fragment
+        android:id="@+id/navigation_drawer"
         android:name="com.eveningoutpost.dexdrip.NavigationDrawerFragment"
-        tools:layout="@layout/fragment_navigation_drawer" />
+        android:layout_width="@dimen/navigation_drawer_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        tools:layout="@layout/fragment_navigation_drawer"/>
 
 </android.support.v4.widget.DrawerLayout>
 
